@@ -21,6 +21,7 @@ HEADERS = \
 	synthv1_reverb.h \
 	synthv1_param.h \
 	synthv1_sched.h \
+	synthv1_tuning.h \
 	synthv1_programs.h \
 	synthv1_controls.h
 
@@ -31,6 +32,7 @@ SOURCES = \
 	synthv1_wave.cpp \
 	synthv1_param.cpp \
 	synthv1_sched.cpp \
+	synthv1_tuning.cpp \
 	synthv1_programs.cpp \
 	synthv1_controls.cpp
 
